Fix promises, add scroll when tabs overflow

--- a/media/com_emundus_vue/app_emundus.css
+++ b/media/com_emundus_vue/app_emundus.css
@@ -1589,10 +1589,10 @@ table tbody tr[data-v-f78392e0]:not(:last-child) {
 table tbody tr td[data-v-f78392e0] {
   padding: 18px 12px;
 }
-.row-fluid .control-group.fabrikElementContainer label.fabrikLabel.control-label.fabrikTip i.icon-star.small[data-v-9196be07] {
+.row-fluid .control-group.fabrikElementContainer label.fabrikLabel.control-label.fabrikTip i.icon-star.small[data-v-17b94d92] {
   top: -5px;
 }
-.icon-star.small[data-v-9196be07] {
+.icon-star.small[data-v-17b94d92] {
   margin-top: 0px;
   padding-top: 0px;
   position: relative;
@@ -1600,21 +1600,21 @@ table tbody tr td[data-v-f78392e0] {
   color: #c30505;
   font-size: 5px;
 }
-.w--current[data-v-9196be07] {
+.w--current[data-v-17b94d92] {
   border: solid 1px #eeeeee;
   background: #eeeeee;
 }
-.w--current[data-v-9196be07]:hover {
+.w--current[data-v-17b94d92]:hover {
   color: var(--em-profile-color);
 }
-.tw-cursor-pointer[data-v-9196be07]:hover {
+.tw-cursor-pointer[data-v-17b94d92]:hover {
   color: var(--em-profile-color);
 }
-.em-w-custom[data-v-9196be07] {
+.em-w-custom[data-v-17b94d92] {
   width: calc(100% - 75px) !important;
   margin-left: auto;
 }
-#add-form-next-campaign[data-v-9196be07] {
+#add-form-next-campaign[data-v-17b94d92] {
   width: 100%;
 }
 .form-builder-element {
