--- a/templates/g5_helium/custom/scss/main.compiled.css
+++ b/templates/g5_helium/custom/scss/main.compiled.css
@@ -1069,9 +1069,6 @@ video {
 .fabrikElement .field-calendar .js-calendar .calendar-container table tbody td.day.selected {
                                 border-radius: 99px;
                             }
-.fabrikElement .field-calendar .js-calendar .calendar-container table tbody td.day.\!selected {
-                                border-radius: 99px !important;
-                            }
 .fabrikElement .field-calendar .js-calendar .calendar-container table tbody td.today:after {
                                 content: unset;
                             }
@@ -5022,6 +5019,9 @@ div[id^='recorder-'] div[id^='pipe-upload-wrap-recorder-'] label {
 }
 .tw-overflow-y-auto {
     overflow-y: auto;
+}
+.tw-overflow-x-scroll {
+    overflow-x: scroll;
 }
 .tw-truncate {
     overflow: hidden;
@@ -115082,9 +115082,6 @@ button.swal2-cancel.goback-btn:hover,
 .label-border-black {
         border-color: var(--em-black);
     }
-.\[-a-zA-Z\:0-9_\.\] {
-    -a-z-a--z: 0-9 .;
-}
 @font-face {
     font-family: 'Material Icons';
     font-style: normal;
